<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:paddingLeft="16dp"
              android:paddingRight="16dp"
              android:orientation="vertical"
              android:backgroundTint="#FEFAFD"
              android:backgroundTintMode="screen"
              android:foregroundTint="#FFFFFF">
    <TextView
            android:text="@string/task_2_1p_unit_converter"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:id="@+id/textView"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="24sp"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/UnitSpinner"
            android:prompt="@string/select_unit_type"
            android:spinnerMode="dropdown"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:weightSum="2">
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/SourceValueSpinner"
                android:prompt="@string/select_source_unit"
                android:layout_weight="1"
        />
        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:srcCompat="@android:drawable/ic_popup_sync"
                android:id="@+id/SwitchButton"
                app:rippleColor="#F6F4F4"
                android:background="#FBF9F9"
                app:backgroundTint="#FBF8F8"
                android:tint="#000000"
                android:contentDescription="@string/switch_values"
                android:focusable="true"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/TargetValueSpinner"
                android:layout_weight="1"
                android:prompt="@string/select_target_unit"
                android:spinnerMode="dropdown"/>
    </LinearLayout>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_value_to_convert"
            android:id="@+id/InputValue"
            android:inputType="numberDecimal"
            android:autofillHints="0"/>
    <Button
            android:text="@string/convert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ConvertButton"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ConversionResult"
            android:textSize="18sp"/>

</LinearLayout>